# pythonGrowmindset

./: README.md  app.py  index.py  main.py  pyproject.toml  requirements.txt
